# SteamClonk

./: .gitignore  CMakeLists.txt  System.c4g
.github/workflows/: c-cpp.yml
src/: C4StartupAboutDlg.cpp  C4StartupMainDlg.cpp  C4Version.h  C4WinMain.cpp  StdSync.cpp
src/res/: engine.rc
